Fix overflow issue on screen my rounding answer.

--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ button{
 .screen {
     margin: 1em;
     padding: 3px;
-    height: 5em;
+    height: 6em;
     background-color: rgb(170, 149, 154);
     margin-bottom: 1em;
     position: relative;
